--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap'); */
 @font-face {
 	font-family: 'Tajawal';
-	src: url(./assets/fonts/Tajawal-Regular.ttf);
+	src: url(./assets/fonts/minecraft.ttf);
 }
 
 html, body, div, span, applet, object, iframe,
